# cinescrapers

./: .gitignore  README.md  devserver.py  main.py  pyproject.toml
.github/: FUNDING.yml
react_app/: package-lock.json  package.json  wrangler.toml
react_app/my-app/: index.html
react_app/my-app/src/: App.tsx
react_app/my-app/src/components/: ShowTimeItem.tsx
src/cinescrapers/: __main__.py  cinema_details.py  cinemap.py  cinescrapers_types.py  exceptions.py  film_identification.py  indexnow.py  sitemap.xml.template  thumbnailing.py  title_normalization.py  types.py  upload.py  utils.py
src/cinescrapers/scrapers/actone/: scrape.py
src/cinescrapers/scrapers/arthouse/: scrape.py
src/cinescrapers/scrapers/arzner/: scrape.py
src/cinescrapers/scrapers/barbican/: scrape.py
src/cinescrapers/scrapers/bertha/: scrape.py
src/cinescrapers/scrapers/bfi/: scrape.py
src/cinescrapers/scrapers/castle/: scrape.py
src/cinescrapers/scrapers/chiswickcinema/: scrape.py
src/cinescrapers/scrapers/cinelumiere/: scrape.py
src/cinescrapers/scrapers/cinereal/: scrape.py
src/cinescrapers/scrapers/close_up_film_centre/: scrape.py
src/cinescrapers/scrapers/coldharbourblue/: scrape.py
src/cinescrapers/scrapers/electriccinema/: scrape.py
src/cinescrapers/scrapers/garden/: scrape.py
src/cinescrapers/scrapers/garden_cinema/: scrape.py
src/cinescrapers/scrapers/genesis/: scrape.py
src/cinescrapers/scrapers/ica/: scrape.py
src/cinescrapers/scrapers/kiln/: scrape.py
src/cinescrapers/scrapers/lexi/: scrape.py
src/cinescrapers/scrapers/peckhamplex/: scrape.py
src/cinescrapers/scrapers/phoenix/: scrape.py
src/cinescrapers/scrapers/prince_charles_cinema/: scrape.py
src/cinescrapers/scrapers/rapidapi/: cinemas.json  scrape.py
src/cinescrapers/scrapers/regentstreet/: scrape.py
src/cinescrapers/scrapers/richmix/: scrape.py
src/cinescrapers/scrapers/rio/: scrape.py
tests/: test_cinema_postcode.py  test_normalize_title.py  test_postcode_extraction.py
tests/film_id/: test_film_id.py
tests/film_id/test_data/: showtimes.db
tests/thumbnails/: test_thumbnailing.py
(+1151 files in other folders)
