[project]
name = "cinescrapers"
version = "0.1.0"
description = "Web scrapers for London indie cinemas"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleach>=6.2.0",
    "dateparser>=1.2.1",
    "playwright>=1.52.0",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "ruff>=0.12.0",
]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["mypackage"]
