[project]
name = "cinescrapers"
version = "0.1.0"
description = "Web scrapers for London indie cinemas"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleach>=6.2.0",
    "boto3>=1.39.4",
    "click>=8.2.1",
    "dateparser>=1.2.1",
    "humanize>=4.12.3",
    "opencv-python-headless>=4.12.0.88",
    "pillow>=11.3.0",
    "playwright>=1.52.0",
    "pydantic>=2.11.7",
    "pyvirtualdisplay>=3.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "ultralytics>=8.3.163",
]

[dependency-groups]
dev = [
    "flask>=3.1.1",
    "isort>=6.0.1",
    "ruff>=0.12.0",
]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["mypackage"]
