[project]
name = "cinescrapers"
version = "0.1.0"
description = "Web scrapers for London indie cinemas"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleach>=6.2.0",
    "boto3>=1.39.4",
    "click>=8.2.1",
    "clip",
    "dateparser>=1.2.1",
    "folium>=0.20.0",
    "humanize>=4.12.3",
    "opencv-python-headless>=4.12.0.88",
    "pillow>=11.3.0",
    "playwright>=1.52.0",
    "pydantic>=2.11.7",
    "pyvirtualdisplay>=3.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.0.0",
    "ultralytics>=8.3.163",
]

[dependency-groups]
dev = ["flask>=3.1.1", "isort>=6.0.1", "pytest>=8.4.1", "ruff>=0.12.0"]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["mypackage"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
